<resources>
    <string name="app_name">纺大云</string>
    <string name="Info">消息</string>
    <string name="people">联系人</string>
    <string name="menu_course">课表</string>
    <string name="main_avatar">你的头像</string>
    <string name="addButton">添加按钮</string>
    <string name="avatar">头像</string>
    <string name="dome_name">玲儿林</string>
    <string name="dome_phone">+8615527094032</string>
    <string name="dome_ment">代码部</string>
    <string name="login_forgetPass">忘记密码</string>
    <string name="login_registered">用户注册</string>
    <string name="login_about">关于软件</string>
    <string name="login_version">v0.0.1</string>
    <string name="login_copyright_notice">Power by lengpucheng @2020 lPC@hll520.cn</string>
    <string name="login_uname">请输入UID或用户名</string>
    <string name="login_pass">请输入密码</string>
    <string name="login_go">登录</string>
    <string name="login_passbox">密码输入框</string>
    <string name="login_unamebox">用户名输入框</string>
    <string name="logo">Logo</string>
    <string name="dome_org">武汉纺织大学广播电视台</string>
    <string name="peo_call">呼叫</string>
    <string name="peo_msg">短信</string>
    <string name="peo_email">邮件</string>
    <string name="peo_send">发消息</string>
    <string name="peo_phone">电话</string>
    <string name="peo_QQ">Q   Q</string>
    <string name="peo_gender">性别</string>
    <string name="peo_sid">学号</string>
    <string name="peo_birthday">生日</string>
    <string name="peo_age">年龄</string>
    <string name="peo_campus">校区</string>
    <string name="peo_college">学院</string>
    <string name="peo_class">班级</string>
    <string name="peo_house">宿舍</string>
    <string name="dome_position">部长</string>
    <string name="app_btout">返回</string>
    <string name="app_share">分享</string>
    <string name="peo_regtime">注册时间</string>
    <string name="app_ing_1">正在努力工作中！</string>
    <string name="dome_regtime">注册时间：2020/04/04</string>
    <string name="my_center_edit">编辑资料</string>
    <string name="app_admin">管理控制台</string>
    <string name="edit_password">修改密码</string>
    <string name="refresh_data">刷新数据</string>
    <string name="my_cleanroom">清理缓存</string>
    <string name="outlogin">退出登录</string>
    <string name="ico">图标</string>
    <string name="my_center">个人中心</string>
    <string name="search_info">点击搜索聊天记录</string>
    <string name="aboutApp">\@2020 lPC@hll520.cn</string>
    <string name="checkImg">验证码</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password_check">确认密码</string>
    <string name="passinfo">密保问题</string>
    <string name="passkey">密保答案</string>
    <string name="invitcode">邀请码</string>
    <string name="Email">电子邮件</string>
    <string name="name">姓名</string>
    <string name="registere">注册</string>
    <string name="hint_username">请设置非纯数字用户名</string>
    <string name="hint_passwrod">请输入至少6位长度密码</string>
    <string name="hint_password_check">请再次输入密码</string>
    <string name="hint_reg_passinfor">请设置密保问题</string>
    <string name="hint_reg_passkey">请设置密保答案</string>
    <string name="hint_reg_invitcode">请输入邀请码（如无请留空）</string>
    <string name="hint_reg_Email">输入你的电子电子邮件</string>
    <string name="hint_reg_name">请告知您的姓名</string>
    <string name="reg_title">用户注册</string>
    <string name="working">正在努力工作中…</string>
    <string name="updata_pass_input">请输入用户名/UID或者学号来查找你的用户</string>
    <string name="updata_bt_find">查找用户</string>
    <string name="updata_text_info">请回答下列问题</string>
    <string name="updata_hint_key">请在此输入答案</string>
    <string name="updata_newpass">新密码</string>
    <string name="save">保存</string>
    <string name="course_edit_Tilet">编辑课程</string>
    <string name="course_hint_name">请输入课程名</string>
    <string name="course_hint_room">请输入上课地点</string>
    <string name="course_hint_teacher">请输入课程教师</string>
    <string name="course_hint_test">请输入考试方式</string>
    <string name="course_impro">导入课程</string>
    <string name="course_add">添加课程</string>
    <string name="course_uploda">上传课程</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="week_1">周一</string>
    <string name="week_2">周二</string>
    <string name="week_3">周三</string>
    <string name="week_4">周四</string>
    <string name="week_5">周五</string>
    <string name="week_6">周六</string>
    <string name="week_7">周日</string>
    <string name="time_1">1</string>
    <string name="time_2">2</string>
    <string name="time_3">3</string>
    <string name="time_4">4</string>
    <string name="time_5">5</string>
    <string name="time_6">6</string>
    <string name="time_7">7</string>
    <string name="time_8">8</string>
    <string name="time_9">9</string>
    <string name="time_10">10</string>
    <string name="time_11">11</string>
    <string name="time_12">12</string>
    <string name="time_13">13</string>
    <string name="time_14">14</string>
    <string name="time_15">15</string>
    <string name="time_16">16</string>
    <string name="setWeek">设置周数</string>
    <string name="manage">控制台</string>
    <string name="time_am_1_2">上午\n1—2节</string>
    <string name="time_am_3_5">上午\n3–5节</string>
    <string name="time_pm_1_2">下午\n1–2节</string>
    <string name="time_pm_3_4">下午\n3–4节</string>
    <string name="time_nigth">晚上\n课程</string>
    <string name="manage_course">空课表</string>
    <string name="organ">组织</string>
    <string name="ment">部门</string>
    <string name="phone">电话</string>
    <string name="bk">返回按钮</string>
    <string name="hint_edit_phone">请输入你的手机号</string>
    <string name="hint_edit_qq">请输入您的QQ</string>
    <string name="hint_edit_class">请输入你的班级</string>
    <string name="hint_edit_house">请输入您的宿舍信息</string>
    <string name="edit_title">编辑资料</string>
    <string name="edit_birthday">请选择出生日期</string>
    <string name="verified">实名认证</string>


    <string-array name="gender">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="campus">
        <item>阳光校区</item>
        <item>南湖校区</item>
        <item>东湖校区</item>
        <item>保密</item>
    </string-array>

    <string-array name="college">
        <item>艺术与设计学院</item>
        <item>伯明翰时尚创意学院</item>
        <item>传媒学院</item>
        <item>服装学院</item>
        <item>经济学院</item>
        <item>管理学院</item>
        <item>会计学院</item>
        <item>外国语学院</item>
        <item>环境工程学院</item>
        <item>化学与化工学院</item>
        <item>数学与计算机学院</item>
        <item>材料科学与工程学院</item>
        <item>机械工程与自动化学院</item>
        <item>电子与电气工程学院</item>
        <item>现代纺织学院</item>
        <item>纺织科学与工程学院</item>
        <item>国际教育学院</item>
        <item>马克思主义学院</item>
        <item>其他</item>
    </string-array>

    <string-array name="week">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>
</resources>
